ffi/include/rfe.h

/**
 * Result code returned by fallible `rfe-ffi` functions.
 */
typedef enum Result {
  /**
   * The function completed successfully.
   */
  RESULT_SUCCESS = 0,
  /**
   * The connected device reported unsupported or incompatible firmware.
   */
  RESULT_INCOMPATIBLE_FIRMWARE_ERROR,
  /**
   * An argument was invalid, such as an out-of-range value or undersized buffer.
   */
  RESULT_INVALID_INPUT_ERROR,
  /**
   * The requested operation is not valid for the current device state.
   */
  RESULT_INVALID_OPERATION_ERROR,
  /**
   * A serial port or operating system I/O error occurred.
   */
  RESULT_IO_ERROR,
  /**
   * The requested data has not been received from the device.
   */
  RESULT_NO_DATA,
  /**
   * A required pointer argument was `NULL`.
   */
  RESULT_NULL_PTR_ERROR,
  /**
   * The device did not respond before the operation timed out.
   */
  RESULT_TIMEOUT_ERROR,
} Result;
typedef uint8_t Attenuation;
typedef uint8_t PowerLevel;
typedef uint8_t RfPower;
typedef uint8_t Mode;
typedef uint8_t CalcMode;
typedef uint8_t DspMode;
typedef uint8_t InputStage;
/**
 * RF Explorer signal generator device.
 */
typedef struct SignalGenerator SignalGenerator;
/**
 * RF Explorer spectrum analyzer device.
 */
typedef struct SpectrumAnalyzer SpectrumAnalyzer;
/**
 * Signal generator configuration.
 *
 * Frequencies are represented in hertz. Durations are represented in
 * milliseconds.
 */
typedef struct SignalGeneratorConfig {
  /**
   * Start frequency for frequency sweep and tracking modes.
   */
  uint64_t start_hz;
  /**
   * CW frequency.
   */
  uint64_t cw_hz;
  /**
   * Total number of sweep or tracking steps.
   */
  uint32_t total_steps;
  /**
   * Frequency increment per step.
   */
  uint64_t step_hz;
  /**
   * CW and frequency sweep attenuation setting.
   */
  Attenuation attenuation;
  /**
   * CW and frequency sweep power level.
   */
  PowerLevel power_level;
  /**
   * Number of amplitude sweep power steps.
   */
  uint16_t sweep_power_steps;
  /**
   * Amplitude sweep start attenuation setting.
   */
  Attenuation start_attenuation;
  /**
   * Amplitude sweep start power level.
   */
  PowerLevel start_power_level;
  /**
   * Amplitude sweep stop attenuation setting.
   */
  Attenuation stop_attenuation;
  /**
   * Amplitude sweep stop power level.
   */
  PowerLevel stop_power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
  /**
   * Delay between sweep steps.
   */
  uint64_t sweep_delay_ms;
} SignalGeneratorConfig;
/**
 * Signal generator amplitude sweep configuration.
 *
 * Frequencies are represented in hertz. Durations are represented in
 * milliseconds.
 */
typedef struct SignalGeneratorConfigAmpSweep {
  /**
   * CW frequency used during the amplitude sweep.
   */
  uint64_t cw_hz;
  /**
   * Number of power steps in the sweep.
   */
  uint16_t sweep_power_steps;
  /**
   * Starting attenuation setting.
   */
  Attenuation start_attenuation;
  /**
   * Starting output power level.
   */
  PowerLevel start_power_level;
  /**
   * Stopping attenuation setting.
   */
  Attenuation stop_attenuation;
  /**
   * Stopping output power level.
   */
  PowerLevel stop_power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
  /**
   * Delay between amplitude sweep steps.
   */
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigAmpSweep;
/**
 * Signal generator CW configuration.
 *
 * Frequencies are represented in hertz.
 */
typedef struct SignalGeneratorConfigCw {
  /**
   * CW frequency.
   */
  uint64_t cw_hz;
  /**
   * Total number of configured steps.
   */
  uint32_t total_steps;
  /**
   * Frequency increment per step.
   */
  uint64_t step_freq_hz;
  /**
   * RF output attenuation setting.
   */
  Attenuation attenuation;
  /**
   * RF output power level.
   */
  PowerLevel power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
} SignalGeneratorConfigCw;
/**
 * Signal generator frequency sweep configuration.
 *
 * Frequencies are represented in hertz. Durations are represented in
 * milliseconds.
 */
typedef struct SignalGeneratorConfigFreqSweep {
  /**
   * Start frequency.
   */
  uint64_t start_hz;
  /**
   * Total number of sweep steps.
   */
  uint32_t total_steps;
  /**
   * Frequency increment per step.
   */
  uint64_t step_hz;
  /**
   * RF output attenuation setting.
   */
  Attenuation attenuation;
  /**
   * RF output power level.
   */
  PowerLevel power_level;
  /**
   * RF output power state.
   */
  RfPower rf_power;
  /**
   * Delay between sweep steps.
   */
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigFreqSweep;
/**
 * Spectrum analyzer configuration.
 *
 * Frequencies are represented in hertz. Fields that are optional in the Rust
 * API use zero or the enum default when the device has not reported a value.
 */
typedef struct SpectrumAnalyzerConfig {
  /**
   * Sweep start frequency.
   */
  uint64_t start_freq_hz;
  /**
   * Frequency step between sweep points.
   */
  uint64_t step_size_hz;
  /**
   * Sweep stop frequency.
   */
  uint64_t stop_freq_hz;
  /**
   * Sweep center frequency.
   */
  uint64_t center_freq_hz;
  /**
   * Sweep span.
   */
  uint64_t span_hz;
  /**
   * Top displayed amplitude in dBm.
   */
  int16_t max_amp_dbm;
  /**
   * Bottom displayed amplitude in dBm.
   */
  int16_t min_amp_dbm;
  /**
   * Number of points in each sweep.
   */
  uint16_t sweep_len;
  /**
   * Whether the expansion radio module is active.
   */
  bool is_expansion_radio_module_active;
  /**
   * Current operating mode.
   */
  Mode mode;
  /**
   * Minimum supported frequency.
   */
  uint64_t min_freq_hz;
  /**
   * Maximum supported frequency.
   */
  uint64_t max_freq_hz;
  /**
   * Maximum supported span.
   */
  uint64_t max_span_hz;
  /**
   * Resolution bandwidth, or zero if it has not been reported by the device.
   */
  uint64_t rbw_hz;
  /**
   * Amplitude offset in dB, or zero if it has not been reported by the device.
   */
  int8_t amp_offset_db;
  /**
   * Calculator mode, or the default value if it has not been reported by the device.
   */
  CalcMode calc_mode;
} SpectrumAnalyzerConfig;
/**
 * Sets the callback called when the main signal generator configuration is received.
 *
 * The callback may be invoked from a background thread, and multiple callback
 * invocations may overlap. `user_data`, if non-NULL, must remain valid until
 * the callback is removed or the signal generator is freed.
 */
void rfe_signal_generator_set_config_callback(const struct SignalGenerator *rfe,
                                              void (*callback)(struct SignalGeneratorConfig config,
                                                               void *user_data),
                                              void *user_data);
/**
 * Sets the callback called when an amplitude sweep configuration is received.
 *
 * The callback may be invoked from a background thread, and multiple callback
 * invocations may overlap. `user_data`, if non-NULL, must remain valid until
 * the callback is removed or the signal generator is freed.
 */
void rfe_signal_generator_set_config_amp_sweep_callback(const struct SignalGenerator *rfe,
                                                        void (*callback)(struct SignalGeneratorConfigAmpSweep config,
                                                                         void *user_data),
                                                        void *user_data);
/**
 * Sets the callback called when a CW configuration is received.
 *
 * The callback may be invoked from a background thread, and multiple callback
 * invocations may overlap. `user_data`, if non-NULL, must remain valid until
 * the callback is removed or the signal generator is freed.
 */
void rfe_signal_generator_set_config_cw_callback(const struct SignalGenerator *rfe,
                                                 void (*callback)(struct SignalGeneratorConfigCw config,
                                                                  void *user_data),
                                                 void *user_data);
/**
 * Sets the callback called when a frequency sweep configuration is received.
 *
 * The callback may be invoked from a background thread, and multiple callback
 * invocations may overlap. `user_data`, if non-NULL, must remain valid until
 * the callback is removed or the signal generator is freed.
 */
void rfe_signal_generator_set_config_freq_sweep_callback(const struct SignalGenerator *rfe,
                                                         void (*callback)(struct SignalGeneratorConfigFreqSweep config,
                                                                          void *user_data),
                                                         void *user_data);
/**
 * Sets the callback called when a sweep is received.
 *
 * The callback may be invoked from a background thread, and multiple callback
 * invocations may overlap. The `sweep` pointer passed to the callback is only
 * valid for the duration of that callback call. `user_data`, if non-NULL, must
 * remain valid until the callback is removed or the analyzer is freed.
 */
void rfe_spectrum_analyzer_set_sweep_callback(const struct SpectrumAnalyzer *rfe,
                                              void (*callback)(const float *sweep,
                                                               uintptr_t sweep_len,
                                                               uint64_t start_hz,
                                                               uint64_t stop_hz,
                                                               void *user_data),
                                              void *user_data);
/**
 * Removes the sweep callback.
 */
void rfe_spectrum_analyzer_remove_sweep_callback(const struct SpectrumAnalyzer *rfe);
/**
 * Sets the callback called when a spectrum analyzer configuration is received.
 *
 * The callback may be invoked from a background thread, and multiple callback
 * invocations may overlap. `user_data`, if non-NULL, must remain valid until
 * the callback is removed or the analyzer is freed.
 */
void rfe_spectrum_analyzer_set_config_callback(const struct SpectrumAnalyzer *rfe,
                                               void (*callback)(struct SpectrumAnalyzerConfig config,
                                                                void *user_data),
                                               void *user_data);
/**
 * Removes the configuration callback.
 */
void rfe_spectrum_analyzer_remove_config_callback(const struct SpectrumAnalyzer *rfe);
/**
 * Sets the number of points in each sweep.
 *
 * Only Plus models support changing the sweep length.
 */
enum Result rfe_spectrum_analyzer_set_sweep_len(const struct SpectrumAnalyzer *rfe,
                                                uint16_t sweep_len);
/**
 * Sets the calculator mode.
 */
enum Result rfe_spectrum_analyzer_set_calc_mode(const struct SpectrumAnalyzer *rfe,
                                                CalcMode calc_mode);
/**
 * Activates the main radio module.
 */
enum Result rfe_spectrum_analyzer_activate_main_radio(const struct SpectrumAnalyzer *rfe);
/**
 * Activates the expansion radio module.
 */
enum Result rfe_spectrum_analyzer_activate_expansion_radio(const struct SpectrumAnalyzer *rfe);
/**
 * Sets the spectrum analyzer input stage.
 */
enum Result rfe_spectrum_analyzer_set_input_stage(const struct SpectrumAnalyzer *rfe,
                                                  InputStage input_stage);
/**
 * Sets the amplitude offset in dB.
 */
enum Result rfe_spectrum_analyzer_set_offset_db(const struct SpectrumAnalyzer *rfe,
                                                int8_t offset_db);
/**
 * Sets the DSP mode.
 */
enum Result rfe_spectrum_analyzer_set_dsp_mode(const struct SpectrumAnalyzer *rfe,
                                               DspMode dsp_mode);