ffi/include/NativeMethods.g.cs


        /// <summary>
        ///  Removes the sweep callback.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_remove_sweep_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_spectrum_analyzer_remove_sweep_callback(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Sets the callback called when a spectrum analyzer configuration is received.
        ///
        ///  The callback may be invoked from a background thread, and multiple callback
        ///  invocations may overlap. `user_data`, if non-NULL, must remain valid until
        ///  the callback is removed or the analyzer is freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_config_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_spectrum_analyzer_set_config_callback(SpectrumAnalyzer* rfe, delegate* unmanaged[Cdecl]<SpectrumAnalyzerConfig, void*, void> callback, void* user_data);

        /// <summary>
        ///  Removes the configuration callback.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_remove_config_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_spectrum_analyzer_remove_config_callback(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Sets the number of points in each sweep.
        ///
        ///  Only Plus models support changing the sweep length.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_sweep_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_sweep_len(SpectrumAnalyzer* rfe, ushort sweep_len);

        /// <summary>
        ///  Sets the calculator mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_calc_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_calc_mode(SpectrumAnalyzer* rfe, CalcMode calc_mode);

        /// <summary>
        ///  Activates the main radio module.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_activate_main_radio", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_activate_main_radio(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Activates the expansion radio module.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_activate_expansion_radio", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_activate_expansion_radio(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Sets the spectrum analyzer input stage.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_input_stage", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_input_stage(SpectrumAnalyzer* rfe, InputStage input_stage);

        /// <summary>
        ///  Sets the amplitude offset in dB.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_offset_db", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_offset_db(SpectrumAnalyzer* rfe, sbyte offset_db);

        /// <summary>
        ///  Sets the DSP mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_dsp_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_dsp_mode(SpectrumAnalyzer* rfe, DspMode dsp_mode);


    }

    /// <summary>
    ///  Signal generator configuration.
    ///
    ///  Frequencies are represented in hertz. Durations are represented in
    ///  milliseconds.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SignalGeneratorConfig
    {
        /// <summary>
        ///  Start frequency for frequency sweep and tracking modes.
        /// </summary>
        public ulong start_hz;
        /// <summary>
        ///  CW frequency.
        /// </summary>
        public ulong cw_hz;
        /// <summary>
        ///  Total number of sweep or tracking steps.
        /// </summary>
        public uint total_steps;
        /// <summary>
        ///  Frequency increment per step.
        /// </summary>
        public ulong step_hz;
        /// <summary>
        ///  CW and frequency sweep attenuation setting.
        /// </summary>
        public Attenuation attenuation;
        /// <summary>
        ///  CW and frequency sweep power level.
        /// </summary>
        public PowerLevel power_level;
        /// <summary>
        ///  Number of amplitude sweep power steps.
        /// </summary>
        public ushort sweep_power_steps;
        /// <summary>
        ///  Amplitude sweep start attenuation setting.
        /// </summary>
        public Attenuation start_attenuation;
        /// <summary>
        ///  Amplitude sweep start power level.
        /// </summary>
        public PowerLevel start_power_level;
        /// <summary>
        ///  Amplitude sweep stop attenuation setting.
        /// </summary>
        public Attenuation stop_attenuation;
        /// <summary>
        ///  Amplitude sweep stop power level.
        /// </summary>
        public PowerLevel stop_power_level;
        /// <summary>
        ///  RF output power state.
        /// </summary>
        public RfPower rf_power;
        /// <summary>
        ///  Delay between sweep steps.
        /// </summary>
        public ulong sweep_delay_ms;
    }

    /// <summary>
    ///  Signal generator amplitude sweep configuration.
    ///
    ///  Frequencies are represented in hertz. Durations are represented in
    ///  milliseconds.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SignalGeneratorConfigAmpSweep
    {
        /// <summary>
        ///  CW frequency used during the amplitude sweep.
        /// </summary>
        public ulong cw_hz;
        /// <summary>
        ///  Number of power steps in the sweep.
        /// </summary>
        public ushort sweep_power_steps;
        /// <summary>
        ///  Starting attenuation setting.
        /// </summary>
        public Attenuation start_attenuation;
        /// <summary>
        ///  Starting output power level.
        /// </summary>
        public PowerLevel start_power_level;
        /// <summary>
        ///  Stopping attenuation setting.
        /// </summary>
        public Attenuation stop_attenuation;
        /// <summary>
        ///  Stopping output power level.
        /// </summary>
        public PowerLevel stop_power_level;
        /// <summary>
        ///  RF output power state.
        /// </summary>
        public RfPower rf_power;
        /// <summary>
        ///  Delay between amplitude sweep steps.
        /// </summary>
        public ulong sweep_delay_ms;
    }

    /// <summary>
    ///  Signal generator CW configuration.
    ///
    ///  Frequencies are represented in hertz.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SignalGeneratorConfigCw
    {
        /// <summary>
        ///  CW frequency.
        /// </summary>
        public ulong cw_hz;
        /// <summary>
        ///  Total number of configured steps.
        /// </summary>
        public uint total_steps;
        /// <summary>
        ///  Frequency increment per step.
        /// </summary>
        public ulong step_freq_hz;
        /// <summary>
        ///  RF output attenuation setting.
        /// </summary>
        public Attenuation attenuation;
        /// <summary>
        ///  RF output power level.
        /// </summary>
        public PowerLevel power_level;
        /// <summary>
        ///  RF output power state.
        /// </summary>
        public RfPower rf_power;
    }

    /// <summary>
    ///  Signal generator frequency sweep configuration.
    ///
    ///  Frequencies are represented in hertz. Durations are represented in
    ///  milliseconds.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SignalGeneratorConfigFreqSweep
    {
        /// <summary>
        ///  Start frequency.
        /// </summary>
        public ulong start_hz;
        /// <summary>
        ///  Total number of sweep steps.
        /// </summary>
        public uint total_steps;
        /// <summary>
        ///  Frequency increment per step.
        /// </summary>
        public ulong step_hz;
        /// <summary>
        ///  RF output attenuation setting.
        /// </summary>
        public Attenuation attenuation;
        /// <summary>
        ///  RF output power level.
        /// </summary>
        public PowerLevel power_level;
        /// <summary>
        ///  RF output power state.
        /// </summary>
        public RfPower rf_power;
        /// <summary>
        ///  Delay between sweep steps.
        /// </summary>
        public ulong sweep_delay_ms;
    }
